Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41002

Text's alpha channel is ignored with ClearType antialiasing when using Qt::WA_TranslucentBackground

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 5.4.0
    • QPA: Direct2D
    • None
    • Windows w/ Direct2D QPA
    • 20ea0cbaba8fe38e1ab8c8240c3917af85f929f5

      When the translucent background is enabled, text is drawn as if it "inherits" the alpha of the background, so you only get the color applied when blending. A workaround is to use D2D1_TEXT_ANTIALIAS_MODE_GRAYSCALE instead.

      We can special-case this in the paint engine, but are there any painter hints we can use to fallback to grayscale?

        For Gerrit Dashboard: QTBUG-41002
        # Subject Branch Project Status CR V

            andrew.knight Andrew Knight
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes